Update package exports

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "prettier": "3.5.3"
+  },
+  "exports": {
+    "./dist/types/webflow/*.d.ts": "./*.d.ts"
   }
 }
