Attempting to fix webflow prod schema violations

--- a/tracking-rules/webflow/Dashboard_Viewed.yml
+++ b/tracking-rules/webflow/Dashboard_Viewed.yml
@@ -12,9 +12,7 @@ rules:
         type:
           - string
       ref:
-        items:
-          type: string
-        type: array
+        type: ["string", "null"]
       section:
         type:
           - string
