--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Page_Viewed.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Page_Viewed.yml
@@ -8,7 +8,10 @@ rules:
       projectUID:
         type:
           - string
-      ref: {}
+      ref:
+        type:
+	  - string
+	  - null
       workspace addons:
         properties:
           full seat count:
