--- a/tracking-rules/webflow/Segmentation_Survey_Completed.yml
+++ b/tracking-rules/webflow/Segmentation_Survey_Completed.yml
@@ -78,6 +78,7 @@ rules:
       isStudent:
         type:
           - string
+	  - null
       locationPreference:
         type:
           - string
