--- a/tracking-rules/webflow/Segmentation_Survey_Page_Viewed.yml
+++ b/tracking-rules/webflow/Segmentation_Survey_Page_Viewed.yml
@@ -8,7 +8,10 @@ rules:
       page type:
         type:
           - string
-      redirect: {}
+      redirect:
+        type:
+	  - boolean
+	  - null
       ref:
         type:
           - string
