--- a/tracking-rules/webflow/Segmentation_Survey_Step_Submitted.yml
+++ b/tracking-rules/webflow/Segmentation_Survey_Step_Submitted.yml
@@ -23,7 +23,7 @@ rules:
           location:
             type:
               - string
-        type: object
+        type: any
       position of selected option:
         type:
           - integer
