--- a/tracking-rules/webflow/Site_Selected.yml
+++ b/tracking-rules/webflow/Site_Selected.yml
@@ -852,4 +852,4 @@ rules:
           workspace:
             type:
               - string
-        type: object
+        type: ["object", "string"]
