--- a/tracking-rules/webflow/Upgraded_plan.yml
+++ b/tracking-rules/webflow/Upgraded_plan.yml
@@ -11,7 +11,7 @@ rules:
       client work:
         items:
           type: string
-        type: array
+        type: ["array", "null"]
       country:
         type:
           - string
