--- a/tracking-rules/webflow/Workspace_Selected.yml
+++ b/tracking-rules/webflow/Workspace_Selected.yml
@@ -52,4 +52,4 @@ rules:
           usedSeats:
             type:
               - integer
-        type: object
+        type: ["object", "string", "null"]
