--- a/tracking-rules/webflow/[Client_payments]_Site_Plan_Pay_On_Your_Own_Clicked.yml
+++ b/tracking-rules/webflow/[Client_payments]_Site_Plan_Pay_On_Your_Own_Clicked.yml
@@ -50,6 +50,7 @@ rules:
       workspace role:
         type:
           - string
+	  - null
       workspace seat count:
         type:
           - integer
