--- a/tracking-rules/webflow/Billing_Action_Tracked.yml
+++ b/tracking-rules/webflow/Billing_Action_Tracked.yml
@@ -122,7 +122,7 @@ rules:
           redemptionsLeft:
             type:
               - integer
-        type: object
+        type: any
       currency:
         type:
           - string
