--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Completed.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Completed.yml
@@ -30,10 +30,11 @@ rules:
               company-size:
                 type:
                   - string
-            type: object
+            type: ["object", "null]
           country:
             type:
-              - string
+	      - string
+	      - null
           custom-budget-amount:
             type:
               - string
@@ -43,7 +44,10 @@ rules:
           kindOfSite:
             type:
               - string
-          language: {}
+          language:
+	    type:
+	      - string
+	      - null
           locationPreference:
             type:
               - string
