--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Completed.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Completed.yml
@@ -30,7 +30,9 @@ rules:
               company-size:
                 type:
                   - string
-            type: ["object", "null]
+            type:
+              - object
+              - null
           country:
             type:
               - string
