--- a/tracking-rules/webflow/CTA_Clicked.yml
+++ b/tracking-rules/webflow/CTA_Clicked.yml
@@ -440,7 +440,7 @@ rules:
       position on page:
         type:
           - string
-          - null
+          - 'null'
       ref:
         type:
           - string
