--- a/tracking-rules/webflow/In-App_Message_Expired.yml
+++ b/tracking-rules/webflow/In-App_Message_Expired.yml
@@ -14,7 +14,7 @@ rules:
       expiresAt:
         type:
           - string
-          - null
+          - 'null'
       location:
         type:
           - string
