--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Page_Viewed.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Page_Viewed.yml
@@ -11,7 +11,7 @@ rules:
       ref:
         type:
           - string
-          - null
+          - 'null'
       workspace addons:
         properties:
           full seat count:
