--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Step_Submitted.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Step_Submitted.yml
@@ -14,7 +14,7 @@ rules:
       destinationPage:
         type:
           - string
-          - null
+          - 'null'
       options selected:
         properties:
           company-industry:
