--- a/tracking-rules/webflow/Profile_Edit_Modal_Viewed.yml
+++ b/tracking-rules/webflow/Profile_Edit_Modal_Viewed.yml
@@ -8,14 +8,14 @@ rules:
       profileId:
         type:
           - string
-          - null
+          - 'null'
       profileName:
         type:
           - string
       profileSlug:
         type:
           - string
-          - null
+          - 'null'
       tabName:
         type:
           - string
