--- a/tracking-rules/webflow/Segmentation_Survey_Page_Viewed.yml
+++ b/tracking-rules/webflow/Segmentation_Survey_Page_Viewed.yml
@@ -11,7 +11,7 @@ rules:
       redirect:
         type:
           - boolean
-          - null
+          - 'null'
       ref:
         type:
           - string
