--- a/tracking-rules/webflow/Showcase_Search_Results_Viewed.yml
+++ b/tracking-rules/webflow/Showcase_Search_Results_Viewed.yml
@@ -11,7 +11,7 @@ rules:
       search:
         type:
           - string
-          - null
+          - 'null'
       site id:
         type:
           - string
