--- a/tracking-rules/webflow/University_Lesson_Completed.yml
+++ b/tracking-rules/webflow/University_Lesson_Completed.yml
@@ -11,7 +11,7 @@ rules:
       course progress:
         type:
           - integer
-          - null
+          - 'null'
       lesson name:
         type:
           - string
