--- a/tracking-rules/webflow/Marketplace_Checkout_Redirected.yml
+++ b/tracking-rules/webflow/Marketplace_Checkout_Redirected.yml
@@ -17,11 +17,11 @@ rules:
       resource id:
         type:
           - string
-          - null
+          - 'null'
       resource type:
         type:
           - string
-          - null
+          - 'null'
       site id:
         type:
           - string
