Update Account_Login_Succeeded.yml to test github action
Update Account_Login_Succeeded.yml
adding 'null' to 2FA

--- a/tracking-rules/webflow/Account_Login_Succeeded.yml
+++ b/tracking-rules/webflow/Account_Login_Succeeded.yml
@@ -8,6 +8,7 @@ rules:
       is 2FA:
         type:
           - boolean
+          - 'null'
       maintain 2FA 30 days:
         type:
           - boolean
