Modifying yaml schemas changed in previous PRs because github actions was broken before and we want to upload these now

--- a/tracking-rules/webflow/Account_Login_Succeeded.yml
+++ b/tracking-rules/webflow/Account_Login_Succeeded.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Account Login Succeeded
     type: TRACK
-    description: Account Login Succeeded
+    description: Account Login Succeeded.
     version: 1
     labels: {}
     properties:
