--- a/tracking-rules/webflow/CTA_Clicked.yml
+++ b/tracking-rules/webflow/CTA_Clicked.yml
@@ -1,7 +1,7 @@
 rules:
   - key: CTA Clicked
     type: TRACK
-    description: CTA Clicked
+    description: CTA Clicked.
     version: 1
     labels: {}
     properties:
