--- a/tracking-rules/webflow/Marketplace_Checkout_Redirect_Page_Viewed.yml
+++ b/tracking-rules/webflow/Marketplace_Checkout_Redirect_Page_Viewed.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Marketplace Checkout Redirect Page Viewed
     type: TRACK
-    description: Marketplace Checkout Redirect Page Viewed
+    description: Marketplace Checkout Redirect Page Viewed.
     version: 1
     labels: {}
     properties:
