--- a/tracking-rules/webflow/Partner_Hub_Page_Viewed.yml
+++ b/tracking-rules/webflow/Partner_Hub_Page_Viewed.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Partner Hub Page Viewed
     type: TRACK
-    description: Partner Hub Page Viewed
+    description: Partner Hub Page Viewed.
     version: 1
     labels: {}
     properties:
