--- a/tracking-rules/webflow/Project_Created.yml
+++ b/tracking-rules/webflow/Project_Created.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Project Created
     type: TRACK
-    description: Project Created
+    description: Project Created.
     version: 1
     labels: {}
     properties:
