--- a/tracking-rules/webflow/Site_Selected.yml
+++ b/tracking-rules/webflow/Site_Selected.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Site Selected
     type: TRACK
-    description: Site Selected
+    description: Site Selected.
     version: 1
     labels: {}
     properties:
