--- a/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
+++ b/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Template Item CTA Clicked
     type: TRACK
-    description: Template Item CTA Clicked
+    description: Template Item CTA Clicked.
     version: 1
     labels: {}
     properties:
