--- a/tracking-rules/webflow/Workspace_Selected.yml
+++ b/tracking-rules/webflow/Workspace_Selected.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Workspace Selected
     type: TRACK
-    description: Workspace Selected
+    description: Workspace Selected.
     version: 1
     labels: {}
     properties:
