--- a/tracking-rules/webflow/[Client_payments]_Site_Plan_Pay_On_Your_Own_Clicked.yml
+++ b/tracking-rules/webflow/[Client_payments]_Site_Plan_Pay_On_Your_Own_Clicked.yml
@@ -1,7 +1,7 @@
 rules:
   - key: '[Client payments] Site Plan Pay On Your Own Clicked'
     type: TRACK
-    description: '[Client payments] Site Plan Pay On Your Own Clicked'
+    description: '[Client payments] Site Plan Pay On Your Own Clicked'.
     version: 1
     labels: {}
     properties:
