--- a/tracking-rules/webflow/Partner_Hub_Commission_Explainer_Opened.yml
+++ b/tracking-rules/webflow/Partner_Hub_Commission_Explainer_Opened.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Partner Hub Commission Explainer Opened
     type: TRACK
-    description: Partner Hub Commission Explainer Opened
+    description: Partner Hub Commission Explainer Opened.
     version: 1
     labels: {}
     properties:
