--- a/tracking-rules/webflow/Profile_Edit_Modal_Viewed.yml
+++ b/tracking-rules/webflow/Profile_Edit_Modal_Viewed.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Profile Edit Modal Viewed
     type: TRACK
-    description: Profile Edit Modal Viewed
+    description: Profile Edit Modal Viewed.
     version: 1
     labels: {}
     properties:
