Fixing straglers for webflow prod violations

--- a/tracking-rules/webflow/Account_Login_Succeeded.yml
+++ b/tracking-rules/webflow/Account_Login_Succeeded.yml
@@ -12,6 +12,7 @@ rules:
         type:
           - boolean
           - 'null'
+          - string
       page:
         type:
           - string
@@ -25,6 +26,7 @@ rules:
         type:
           - boolean
           - 'null'
+          - string
       signup method:
         type:
           - string
