--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Abandoned.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Abandoned.yml
@@ -38,7 +38,10 @@ rules:
               company-size:
                 type:
                   - string
-            type: object
+            type:
+              - object
+              - 'null'
+              - string
           country:
             type:
               - string
