--- a/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
+++ b/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
@@ -29,6 +29,7 @@ rules:
         type:
           - integer
           - 'null'
+          - string
       template id:
         type:
           - string
