--- a/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
+++ b/tracking-rules/webflow/Template_Item_CTA_Clicked.yml
@@ -27,9 +27,7 @@ rules:
           - string
       template cost:
         type:
-          - integer
-          - 'null'
-          - string
+          - any
       template id:
         type:
           - string
