--- a/tracking-rules/webflow/Matchmaking_Experts_Survey_Abandoned.yml
+++ b/tracking-rules/webflow/Matchmaking_Experts_Survey_Abandoned.yml
@@ -39,9 +39,7 @@ rules:
                 type:
                   - string
             type:
-              - object
-              - 'null'
-              - string
+              - any
           country:
             type:
               - string
